# -gstreamer-rs-tutorial

./: Cargo.toml  README.md
src/: lib.rs
src/rgb2gray/: imp.rs  mod.rs
