[package]
name = "gst-plugin-tutorial"
version = "0.9.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63"
description = "Rust Tutorial Plugin"

[dependencies]
gst = { package = "gstreamer", version = "0.18.8", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", version = "0.18", features = ["v1_18"]}
gst-video = { package = "gstreamer-video", version = "0.18.7", features = ["v1_18"]}
# gst-audio = { package = "gstreamer-audio", version = "0.18"}
byte-slice-cast = "1.0"
num-traits = "0.2"
once_cell = "1.0"

[lib]
name = "gstrstutorial"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
